syntax = "proto3";

option csharp_namespace = "GrpcRpcLib.Consumer.Protos";

message MessageEnvelope {
	string id = 1;
	string type = 2;
	string correlation_id = 3;
	int32 priority=4;
	string reply_to = 5;
	bytes payload = 6;
	string created_at = 7;
	string status = 8;
	int32 retry_count = 9;
	string last_retry_at = 10;
	string error_message = 11;
}

message ProcessResponse {
	bool success = 1;
	string error_message = 2;
}

service GrpcReceiver {
	rpc Process (MessageEnvelope) returns (ProcessResponse);
}